2010-08-22  Eric Seidel  <eric@webkit.org>

Reviewed by Adam Barth.

        HTML5 TreeBuilder builds wrong DOM for <a><svg><tr><input></a>
        https://bugs.webkit.org/show_bug.cgi?id=44390

        * html5lib/resources/adoption01.dat:
2010-08-22  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        HTML5 TreeBuilder builds wrong DOM for <a><svg><tr><input></a>
        https://bugs.webkit.org/show_bug.cgi?id=44390

        The HTML5 spec has changed since Adam and I original wrote
        the HTMLTreeBuilder.  Most important for this change was resolution of:
        http://www.w3.org/Bugs/Public/show_bug.cgi?id=9580

        I also removed our "phrasing" tag support since that was also removed
        from the spec as part of other bug fixes.

        This is tested by tonyg's <a><svg><tr><input></a> test in adoption01.dat.

        * html/HTMLTreeBuilder.cpp:
        (WebCore::HTMLTreeBuilder::processCloseWhenNestedTag):
        (WebCore::HTMLTreeBuilder::processAnyOtherEndTagForInBody):
        (WebCore::HTMLTreeBuilder::furthestBlockForFormattingElement):
        (WebCore::HTMLTreeBuilder::processEndTag):

Canonical link: https://commits.webkit.org/56564@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65785 268f45cc-cd09-0410-ab3c-d52691b4dbfc